# SoftwareStreams

./: CMakeLists.txt  README.md  main.cpp
include/: Connect.hpp  IConnect.hpp
src/: CMakeLists.txt  Connect.cpp
